[package]
name = "ndrustfft"
version = "0.2.2"
authors = ["preiter <phil.reiter93@gmail.com>"]
edition = "2018"
description = "N-dimensional FFT, real-to-complex FFT and real-to-real DCT"
repository = "https://github.com/preiter93/ndrustfft"
keywords = ["fft", "rustfft", "realfft", "rustdct", "ndarray"]
readme = "README.md"
license = "MIT"

[lib]
name = "ndrustfft"
path = "src/lib.rs"

[dependencies]
ndarray = { version = "0.15.0", features = ["rayon"] }
rustfft = "6.0"
num-traits = "0.2.12"
rustdct = "0.6"
realfft = "2.0.1"

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"] }

[[bench]]
name = "ndrustfft"
harness = false

[[bench]]
name = "ndrustfft_par"
harness = false
