[package]
name = "ndrustfft"
version = "0.4.2"
authors = ["preiter <phil.reiter93@gmail.com>"]
edition = "2018"
description = "N-dimensional FFT, real-to-complex FFT and real-to-real DCT"
repository = "https://github.com/preiter93/ndrustfft"
keywords = ["fft", "rustfft", "realfft", "rustdct", "ndarray"]
readme = "README.md"
license = "MIT"

[lib]
name = "ndrustfft"
path = "src/lib.rs"

[dependencies]
ndarray = { version = "0.15" }
rustfft = { version = "6", default-features = false }
num-traits = "0.2"
rustdct = "0.7"
realfft = "3"

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"] }

[[bench]]
name = "ndrustfft"
harness = false

[[bench]]
name = "ndrustfft_par"
harness = false

[features]
default = ["avx", "sse", "neon", "parallel"]
avx = ["rustfft/avx"]
sse = ["rustfft/sse"]
neon = ["rustfft/neon"]
parallel = ["ndarray/rayon"]
